Add keyboard shortcuts for main actions

--- a/popup.html
+++ b/popup.html
@@ -39,16 +39,6 @@
     <table class="script-list">
       <tr>
         <td>
-          <span class="script-title started">JukeBot</span>
-        </td>
-        <td>
-          Main script for JukeBot. Allows you to do things like view the song that is currently playing or give a quick thumbs-up.
-        </td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>
           <span id="auto-doot-title" class="script-title">AutoDope</span>
         </td>
         <td>
@@ -102,7 +92,7 @@
     </div>
 
     <div id="created-by">
-      <i>Created by Hawk</i>
+      <i>Created by Hawk, patched by Darin</i>
     </div>
   </body>
 </html>
