--- a/popup.html
+++ b/popup.html
@@ -1,28 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>JukeBot</title>
-    <link href="./styles.css" rel="stylesheet" type="text/css">
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
     <script src="./scripts/popup/popup.js" type="text/javascript"></script>
     <script src="./scripts/popup/Animator.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="header">
-        <h1>JukeBot</h1>
+      <h1>JukeBot</h1>
     </div>
 
     <table id="song-display">
       <tr>
         <td>
-            <div id="downvote" class="thumb downvote">
-                <img src="./icons/thumbs_down24.png" draggable="false" />
-            </div>
+          <div id="downvote" class="thumb downvote">
+            <img src="./icons/thumbs_down24.png" draggable="false" />
+          </div>
         </td>
         <td>
           <div class="no-select">
             <div id="song-title">Africa</div>
             <div id="artists">Toto</div>
-            <div id="played-by"><i>Played by <span id="dj">Hawk</span></i></div>
+            <div id="played-by">
+              <i>Played by <span id="dj">Hawk</span></i>
+            </div>
           </div>
           <div id="progress-bar" class="progress-bar">
             <div id="progress-fill" class="progress-fill"></div>
@@ -30,7 +32,7 @@
         </td>
         <td>
           <div id="upvote" class="thumb upvote">
-              <img src="./icons/thumbs_up24.png" draggable="false" />
+            <img src="./icons/thumbs_up24.png" draggable="false" />
           </div>
         </td>
       </tr>
@@ -42,7 +44,8 @@
           <span class="script-title started">JukeBot</span>
         </td>
         <td>
-          Main script for JukeBot. Allows you to do things like view the song that is currently playing or give a quick thumbs-up.
+          Main script for JukeBot. Allows you to do things like view the song
+          that is currently playing or give a quick thumbs-up.
         </td>
         <td></td>
         <td></td>
@@ -51,13 +54,11 @@
         <td>
           <span id="auto-doot-title" class="script-title">AutoDope</span>
         </td>
-        <td>
-          Spread the love! Automatically give a thumbs-up for every song.
-        </td>
+        <td>Spread the love! Automatically give a thumbs-up for every song.</td>
         <td></td>
         <td>
           <label class="switch">
-            <input id="auto-doot-checkbox" type="checkbox">
+            <input id="auto-doot-checkbox" type="checkbox" />
             <span class="slider"></span>
           </label>
         </td>
@@ -66,15 +67,18 @@
         <td>
           <span id="notifier-title" class="script-title">Notifier</span>
         </td>
+        <td>Get a notification whenever you're mentioned in the JQBX chat.</td>
         <td>
-          Get a notification whenever you're mentioned in the JQBX chat.
-        </td>
-        <td>
-          <img id="notifier-settings" src="./icons/cog16.png" class="settings-icon" draggable="false" />
+          <img
+            id="notifier-settings"
+            src="./icons/settings24_light.svg"
+            class="settings-icon"
+            draggable="false"
+          />
         </td>
         <td>
           <label class="switch">
-            <input id="notifier-checkbox" type="checkbox">
+            <input id="notifier-checkbox" type="checkbox" />
             <span class="slider"></span>
           </label>
         </td>
@@ -87,14 +91,14 @@
         <div>
           <label class="switch-text">Notify me about all new messages</label>
           <label class="switch">
-            <input id="notifier-show-all" type="checkbox">
+            <input id="notifier-show-all" type="checkbox" />
             <span class="slider"></span>
           </label>
         </div>
         <div>
           <label class="switch-text">Notify me about room alerts</label>
           <label class="switch">
-            <input id="notifier-show-alerts" type="checkbox">
+            <input id="notifier-show-alerts" type="checkbox" />
             <span class="slider"></span>
           </label>
         </div>
