Change player design

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,16 @@
       <tr>
         <td>
           <div id="downvote" class="thumb downvote">
-            <img src="./icons/thumbs_down24.png" draggable="false" />
+            <img
+              src="./icons/thumb_down24_light.svg"
+              class="thumb-icon-inactive"
+              draggable="false"
+            />
+            <img
+              src="./icons/thumb_down24_danger.svg"
+              class="thumb-icon-active"
+              draggable="false"
+            />
           </div>
         </td>
         <td>
@@ -32,7 +41,16 @@
         </td>
         <td>
           <div id="upvote" class="thumb upvote">
-            <img src="./icons/thumbs_up24.png" draggable="false" />
+            <img
+              src="./icons/thumb_up24_light.svg"
+              class="thumb-icon-inactive"
+              draggable="false"
+            />
+            <img
+              src="./icons/thumb_up24_success.svg"
+              class="thumb-icon-active"
+              draggable="false"
+            />
           </div>
         </td>
       </tr>
@@ -71,7 +89,7 @@
         <td>
           <img
             id="notifier-settings"
-            src="./icons/settings24_light.svg"
+            src="./icons/setting24_light.svg"
             class="settings-icon"
             draggable="false"
           />
