Add dropdown to select type of autovote

--- a/popup.html
+++ b/popup.html
@@ -39,10 +39,15 @@
     <table class="script-list">
       <tr>
         <td>
-          <span id="auto-doot-title" class="script-title">AutoDope</span>
+          <span id="auto-doot-title" class="script-title">Auto Vote</span>
         </td>
         <td>
-          Spread the love! Automatically give a thumbs-up for every song.
+          <label for="voteType">Automatically vote for every song: </label>
+          <select name="voteType" id="voteType">
+            <option value="upvote">Upvote</option>
+            <option value="boofstar">Boofstar</option>
+            <option value="downvote">Downvote :(</option>
+          </select>
         </td>
         <td></td>
         <td>
